[package]
name = "ethereum_hashing"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Hashing primitives used in Ethereum, using sha2 (RISC-V compatible)"
repository = "https://github.com/syjn99/ethereum_hashing"
documentation = "https://docs.rs/ethereum_hashing"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.80.0"

[dependencies]
sha2 = "0.10"
# poseidon2 hash
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "055bde3" , optional = true}

[dev-dependencies]
rustc-hex = "2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"

[features]
default = ["zero_hash_cache", "sha2"]
zero_hash_cache = []
sha2 = []
poseidon2 = ["zkhash"]
