[package]
name = "ethereum_hashing"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Hashing primitives used in Ethereum, using sha2 (RISC-V compatible)"
repository = "https://github.com/syjn99/ethereum_hashing"
documentation = "https://docs.rs/ethereum_hashing"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.80.0"

[dependencies]
sha2 = { version = "0.10", optional = true }
# poseidon2 hash
zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "055bde3", optional = true }

[dev-dependencies]
rustc-hex = "2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"

[features]
default = ["zero_hash_cache", "poseidon2"]
zero_hash_cache = []
# Hash features are mutually exclusive, You must and only can select one of them.
sha2 = ["sha2/default"]
poseidon2 = ["zkhash"]
