[package]
name = "ethereum_hashing"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Hashing primitives used in Ethereum, using sha2 (RISC-V compatible)"
repository = "https://github.com/ReamLabs/ethereum_hashing"
documentation = "https://docs.rs/ethereum_hashing"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.80.0"

[features]
default = ["zero_hash_cache"]
zero_hash_cache = []

[dependencies]
sha2 = "0.10"

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
ring = "0.17"

[dev-dependencies]
rustc-hex = "2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.33"
